More doc updates
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/gensio.5
+++ b/gensio.5
@@ -10,7 +10,8 @@ gensio \- How to specify a gensio
 .BR gensio
 stands for GENeral Stream Input Output.  It provides an abstraction
 for all kinds of stream I/O, and even makes some packet I/O look like
-stream I/O (like UDP).
+stream I/O (like UDP).  In particular, gensio makes it easy to create
+encrypted and authenticated connections.
 
 The
 .BR gensio
