--- a/man/gensio_event.3
+++ b/man/gensio_event.3
@@ -1,4 +1,4 @@
-.TH gensio_event 3 "21 Fed 2019"
+.TH gensio_event 3 "21 Feb 2019"
 .SH NAME
 gensio_event \- Event handler for events from a gensio
 
@@ -203,4 +203,4 @@ which must be handled.
 .SH "SEE ALSO"
 gensio_set_callback(3), str_to_gensio_child(3), gensio_open_channel(3),
 gensio_open_channel_s(3), gensio_acc_str_to_gensio(3), str_to_gensio(3)
-sergensio(5)
+sergensio(5), gensio_err(3)
