Add man page for gensio_set_callback and friends
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/str_to_gensio.3
+++ b/man/str_to_gensio.3
@@ -82,6 +82,6 @@ The new gensio is returned in
 .B io.
 It will be in the closed state.
 .SH "RETURN VALUES"
-Zero is returned on succes, or a gensio error on failure.
+Zero is returned on success, or a gensio error on failure.
 .SH "SEE ALSO"
 gensio_set_callback(3), gensio_err(3), gensio(5)
